--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Label x:Name="lblText" Content="Label" HorizontalAlignment="Left" Margin="108,62,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="108,123,0,0" VerticalAlignment="Top" Width="104" Click="btnUpdate_Click"/>
 
     </Grid>
 </Window>
