--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,6 +11,7 @@
         <Label x:Name="lCounter" Content="0" HorizontalAlignment="Left" Height="46" Margin="620,148,0,0" VerticalAlignment="Top" Width="140"/>
         <Label x:Name="lblText" Content="Label" HorizontalAlignment="Left" Margin="108,62,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="108,123,0,0" VerticalAlignment="Top" Width="104" Click="btnUpdate_Click"/>
+        <Button x:Name="btnNew" Content="Nieuw" HorizontalAlignment="Left" Margin="108,171,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
